<resources>
    <string name="app_name">itimer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!--    settings screen labels-->
    <string name="textViewRounds">Rounds</string>
    <string name="textViewActivityTime">Activity time</string>
    <string name="textViewBreakTime">Break time</string>
    <string name="textViewScreenLock">Screen lock</string>
    <string name="textViewVolume">Volume</string>
    <string name="textViewTotalTime">total time</string>
    <string name="buttonStart">START</string>
</resources>